# hexlet-django-blog

./: db.sqlite3  pyproject.toml  views.py
hexlet_django_blog/: .env  settings.py  urls.py
hexlet_django_blog/article/: models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/articles/: admin.py  urls.py  views.py
templates/: article.html  index.html
templates/articles/: article.html  create.html  index.html  update.html
